# adaptive-agentic-rag

./: README.md  ingestion.py  main.py  pyproject.toml  run-019cf56f-b1f5-7e20-966f-9adffefdee54 (1).json
.chroma/6663f6c5-30bc-47f9-ab64-2c67840926d1/: index_metadata.pickle
graph/: graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
